# rust-api-samples-rocket

./: .gitignore  README.md  axum-1703678135770.firedbg.ss  axum-1703759810530.firedbg.ss
.devcontainer/: devcontainer.json
articles/: 2a7554776192a2.md  307e8c65951f4a.md
axum/: Cargo.toml  README.md
axum/firedbg/src/: main.rs.firedbg.map  models.rs.firedbg.map  routes.rs.firedbg.map
axum/src/: main.rs  models.rs  routes.rs
rocket/: Cargo.toml  Dockerfile  README.md  Rocket.toml  litestream.yml  run.sh
rocket/migrations/: 20231211015159_create_table.up.sql
rocket/src/: main.rs  models.rs  routes.rs
