[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "runtime-tokio", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
